# health-ops-mcp

./: .gitignore  README.md  database.py  local_demo.db  pyproject.toml  requirements.txt
health_ops_mcp/: dashboard.py  database.py  models.py  server.py  storage.py
