[project]
name = "health-ops-mcp"
version = "0.1.0"
description = "MCP server modeling staffing and compliance agents over a synthetic home-care workforce dataset."
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.21.2",
  "pydantic>=2.7.0",
  "streamlit>=1.52.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
